# v0-neuromind-ai-dashboard

./: .env.example  COMMANDS.md  DEPLOYMENT.md  DEVELOPMENT.md  PROJECT_FILES.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  package-lock.json
app/: globals.css  layout.tsx  page.tsx
app/assess/: page.tsx
app/history/: page.tsx
backend/: .gitignore  Procfile  README.md  generate_data.py  main.py  pyproject.toml  setup.sh  train_model.py
components/: AssessmentResults.tsx
