[project]
name = "neuromind-ai"
version = "0.1.0"
description = "FastAPI backend for NeuroMind AI mental health assessment"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "scikit-learn>=1.3.2",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "gunicorn>=21.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
